# polynomial_integration

./: .gitignore  README.md  pyproject.toml  rebuild_wheel.sh  sandbox.py
.github/workflows/: pre_and_release.yaml
data/: 20250607_184926_order2_from_0_to_1.json  20250607_190040_order2_from_-1_to_1.json  20250607_191857_order2_from_-1_to_1.json
data/plot_scripts/: plot_all.py  plot_claude.py
examples/: add.sh  display.sh  integration_long.sh  integration_short.sh  multiply.sh  subtract.sh
examples/sample_data/: integration_long.json  integration_short.json
src/empit_coding_challenge/: main.py  polynom.py  routines.py  solvers.py  utils.py
src/helpers/: adaptive_integration.py  cli.py  errors_calc.py  plotting.py  rich_console.py
src/polynomials/: _INSTRUCTIONS.md  data_models.py  main.py  polynom.py  solvers.py  utils.py
tests/: add_polynom_test.py  analytic_solver_test.py  combine_stats_test.py  montecarlo_solver_test.py  montercarlo_solver_mp_test.py  mult_polynom_test.py  numeric_solver_test.py  parse_polynom_from_string_test.py  subtract_polynom_test.py  utils.py
tests/integration/: integration_tests.py
tests/shared/: bounded_integrals.py
tests/unit/: add_polynom_test.py  analytic_solver_test.py  mult_polynom_test.py  parse_polynom_from_string_test.py  solvers_test.py
