[project]
name = "empit-coding-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefan Wanckel",email = "stefanwanckel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "empit_coding_challenge", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
polynomials = "empit_coding_challenge.main:main"