[tool.poetry]
name = "polynomials"
version = "0.1.0"
description = ""
authors = ["Stefan Wanckel <stefanwanckel@gmail.com>"]
readme = "README.md"
packages = [
    {include = "polynomials", from = "src"},
    {include = "helpers", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.6"
strenum = "^0.4.15"
rich = "^14.0.0"
typer = "^0.16.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[tool.poetry.scripts]
poly = "polynomials.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"